# economic_light_observer

./: .dockerignore  .gitignore  README.md  dockerfile  main.py  pyproject.toml
.github/workflows/: docker-image.yml
economic_light_observer/: base.py  economic_light_observer.py
economic_light_observer/crawler/: taiwan.py  taiwan_playwright.py
