[tool.poetry]
name = "economic_light_observer"
version = "0.0.1"
description = ""
authors = ["DoubleChuang <ethan9141@gmail.com>"]
readme = "README.md"
packages = [{include = "economic_light_observer"}]

[tool.poetry.dependencies]
python = "^3.11"
python-decouple = "^3.8"
playwright = "^1.44.0"
nest-asyncio = "^1.6.0"


[tool.poetry.group.test.dependencies]
pytest-playwright = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
